--- a/file3.html
+++ b/file3.html
@@ -9,5 +9,6 @@
 <body>
     <h1>introduction</h1>
     <p>now it's working<p>
+        <img src="/home/clemence/Downloads/my pic.jpg" alt="my image">
 </body>
 </html>
